# auto-updater

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  parser.rs  schema.rs
tests/: update_tests.rs
